# nautilus

./: .clippy.toml  .gitignore  Cargo.toml  README.md  dist-workspace.toml  docker-compose.yml
crates/nautilus-cli/: Cargo.toml  README.md
crates/nautilus-cli/src/: main.rs  test_support.rs  tui.rs
crates/nautilus-cli/wix/: main.wxs
crates/nautilus-codegen/: Cargo.toml  README.md
crates/nautilus-codegen/src/: backend.rs  composite_type_gen.rs  enum_gen.rs  extension_types.rs  generator.rs  lib.rs  main.rs  type_helpers.rs  writer.rs
crates/nautilus-codegen/tests/: parse_schema_tests.rs  readme_contract_tests.rs  snapshot_tests.rs  type_helpers_tests.rs  writer_tests.rs
crates/nautilus-codegen/wix/: main.wxs
crates/nautilus-connector/: Cargo.toml  README.md
crates/nautilus-connector/src/: client.rs  error.rs  executor.rs  from_row.rs  lib.rs  mysql.rs  mysql_stream.rs  postgres.rs  postgres_stream.rs  row.rs  row_stream.rs  sqlite.rs  sqlite_stream.rs  transaction.rs  utils.rs  value_hint.rs
crates/nautilus-connector/tests/: integration_mysql.rs  integration_pg.rs  integration_sqlite.rs
crates/nautilus-core/: Cargo.toml  README.md
crates/nautilus-core/src/: args.rs  cursor.rs  delete.rs  error.rs  expr.rs  insert.rs  lib.rs  protocol_json.rs  select.rs  update.rs  value.rs
crates/nautilus-core/src/column/: from_value.rs  marker.rs  mod.rs  row_access.rs  typed.rs
crates/nautilus-core/tests/: expression_tree.rs  query_builders.rs  value_conversions.rs
crates/nautilus-dialect/: Cargo.toml  README.md
crates/nautilus-dialect/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
crates/nautilus-dialect/tests/: dialect_tests.rs
crates/nautilus-engine/: Cargo.toml  README.md
crates/nautilus-engine/src/: args.rs  conversion.rs  lib.rs  main.rs  state.rs  transport.rs
crates/nautilus-engine/tests/: aggregation_and_raw_sql_tests.rs  (+11 more)
crates/nautilus-lsp/: Cargo.toml  README.md
crates/nautilus-lsp/src/: backend.rs  convert.rs  document.rs  main.rs
crates/nautilus-lsp/wix/: main.wxs
crates/nautilus-migrate/: Cargo.toml  README.md
crates/nautilus-migrate/src/: applier.rs  ddl.rs  diff.rs  error.rs  executor.rs  file_store.rs  lib.rs  live.rs  migration.rs  provider.rs  serializer.rs  tracker.rs  utils.rs
crates/nautilus-migrate/src/inspector/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/nautilus-migrate/tests/: applier_tests.rs  ddl_tests.rs  diff_tests.rs  postgres_extensions_e2e.rs  serializer_tests.rs
crates/nautilus-migrate/tests/common/: mod.rs
crates/nautilus-protocol/: Cargo.toml  README.md
crates/nautilus-protocol/src/: error.rs  lib.rs  methods.rs  version.rs  wire.rs
crates/nautilus-protocol/tests/: methods_tests.rs
crates/nautilus-schema/: Cargo.toml  GRAMMAR.md  README.md
crates/nautilus-schema/src/: ast.rs  bool_expr.rs  diagnostic.rs  error.rs  formatter.rs  ir.rs  lexer.rs  lib.rs  parser.rs  span.rs  sql_expr.rs  token.rs  visitor.rs
crates/nautilus-schema/src/analysis/: completion.rs  goto_definition.rs  hover.rs  mod.rs  semantic_tokens.rs
crates/nautilus-schema/src/validator/: composites.rs  declarations.rs  defaults.rs  ir_builder.rs  mod.rs  models.rs  names.rs  relations.rs
crates/nautilus-schema/tests/: analysis_tests.rs  formatter_tests.rs  ir_tests.rs  lexer_tests.rs  parser_tests.rs  validation_tests.rs  visitor_tests.rs
crates/nautilus-schema/tests/common/: mod.rs
tools/vscode-nautilus-schema/: LICENSE.txt  README.md  language-configuration.json  package-lock.json  package.json
(+143 files in other folders)
