[package]
name = "nautilus-orm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core query AST and type system for Nautilus ORM"

[lib]
name = "nautilus_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
uuid = { version = "1.0", features = ["serde"] }
rust_decimal = "1.35"
serde_json = "1.0"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]

[lints]
workspace = true
