[package]
name = "nautilus-orm-migrate"
description = "Database migration engine for Nautilus ORM"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_migrate"

[dependencies]
nautilus-schema = { workspace = true }
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "any"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.14"
